代码整理, 将core中的test代码移到test模块中